# castepinput

./: .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  CHANGELOG.md  README.md  Readme.md  pyproject.toml  setup.json  setup.py
.github/workflows/: ci.yaml  python-package.yml
castepinput/: __init__.py  common.py  inputs.py  parser.py
castepinput/tests/: test_common.py  test_inputs.py  test_parser.py  test_utils.py
castepinputs/: __init__.py  common.py  inputs.py  parser.py  utils.py
castepinputs/tests/: test_inputs.py  test_parser.py  test_utils.py
castepinputs/tests/data/: cell_example.cell  cell_example_2.cell  cell_example_3.cell
tests/: test_common.py  test_inputs.py  test_parser.py
tests/data/: cell_example_1.cell  cell_example_2.cell
