[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "castepinput"
authors = [{name = "Bonan Zhu", email = "zhubonan@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta"
    ]
dynamic = ["version", "description"]

dependencies = ["numpy"]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/zhubonan/castepinput"

[project.optional-dependencies]
"pre-commit" = [
                  "pre-commit", "pylint-pytest"
              ]
test = ["pytest", "pytest-cov", "coverage"]
